public class Constants
{
    public static string Hand { get => "ruka"; }
    public static string Shoot { get => "Shoot"; }
    public static string JumpShoot { get => "JumpShoot"; }
    public static string Walk { get => "Walk"; }
    public static string InvisibleWall { get => "invisibleWall"; }
}